[package]
name = "fat32"
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = { path = "../deps/rust-fatfs", version = "0.4", default-features = false, features = [
  "alloc",
  "lfn",
] }
vfs = { path = "../vfs" }
drivers = { path = "../drivers" }
spin = "0.9"
