[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"


[workspace.dependencies]
bitflags = "2.0"
log = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
num_enum = { version = "0.5", default-features = false }

[profile.release]
# debug = true
# opt-level = 0
