[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
log = "0.4"

virtio-drivers = "0.4.0"

memory = { path = "../memory" }
utils = { path = "../utils" }
