[package]
name = "major"
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = "0.4"
spin = "0.9"
goblin = { version = "0.6", default-features = false, features = [
  "elf32",
  "elf64",
  "endian_fd",
] }

num_enum = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
riscv = { workspace = true }

drivers = { path = "../drivers" }
vfs = { path = "../vfs" }
fat32 = { path = "../fat32" }
memory = { path = "../memory" }
utils = { path = "../utils" }
signal = { path = "../signal" }
filesystem = { path = "../filesystem" }

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
test = []
