[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9"

log = { workspace = true }
lazy_static = { workspace = true }
bitflags = { workspace = true }
riscv = { workspace = true }

utils = { path = "../utils" }
