[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
lazy_static = { workspace = true }
bitflags = { workspace = true }
riscv = { workspace = true }

buddy_system_allocator = { path = "../../../deps/buddy_system_allocator" }
utils = { path = "../utils" }
